--- a/public/index.html
+++ b/public/index.html
@@ -103,9 +103,9 @@
                            <div class="tab-pane fade show active h-100" id="live" role="tabpanel" aria-labelledby="live-tab">
                            <!--Content tab-->
                                <!--report-->
-                               <div class="current-report pt-2 ml-4">
+                               <div class="current-report pt-2 ml-4  d-inline-block p-3">
                                    <div class="current-time d-inline mr-3">7:12 PM</div>
-                                   <button class="current-total bg-dark d-inline-block text-white mr-2 px-2 rounded" onclick="openNav()" id="current-people">CURRENT: 57</button>
+                                   <button class="current-total bg-dark d-inline-block text-white mr-2 px-3 rounded" onclick="openNav()" id="current-people">CURRENT: 57</button>
                                    <div class="current-detail d-inline">
                                        <div class="audit d-inline-block mr-5"><i class="fas fa-circle text-primary mr-2"></i>23</div>
                                        <div class="audit d-inline-block  mr-5"><i class="fas fa-circle text-danger mr-2"></i>50</div>
@@ -140,13 +140,11 @@
          <!--box-->
              <div id="mySidenav" class="sidenav">
                 <div class="sideBarSearch">
-                <i class="fas fa-search fa-2x bg-transparent"></i>
-                <button class="current-total bg-dark d-inline-block text-white mr-2 px-2 rounded" onclick="openNav()" id="current-people">CURRENT: 57</button>
-                 <a href="javascript:void(0)" class="closebtn d-inline-block" onclick="closeNav()">&times;</a>
-
-</div>
-
-
+                    <i class="fas fa-search fa-2x bg-transparent mx-2"></i>
+                    <button class="current-total bg-dark d-inline-block text-white mr-2 px-3 rounded" onclick="openNav()" id="current-people">CURRENT: 57</button>
+                    <a href="javascript:void(0)" class="closebtn d-inline-block" onclick="closeNav()">&times;</a>
+                </div>
+                <div class="list-profile-detail"></div>
              </div>
 
          <!--end box-->
