--- a/public/index.html
+++ b/public/index.html
@@ -138,19 +138,192 @@
          </div>
          <!--End Content right-->
          <!--box-->
-             <div id="mySidenav" class="sidenav">
+             <div id="mySidenav" class="sidenav pl-3">
                 <div class="sideBarSearch">
                     <i class="fas fa-search fa-2x bg-transparent mx-2"></i>
                     <button class="current-total bg-dark d-inline-block text-white mr-2 px-3 rounded" onclick="openNav()" id="current-people">CURRENT: 57</button>
                     <a href="javascript:void(0)" class="closebtn d-inline-block" onclick="closeNav()">&times;</a>
                 </div>
-                <div class="list-profile-detail"></div>
+                <div class="total-profile mt-4">
+                <!--One Group profile-->
+                    <div class="one-profile mt-4">
+                        <label for="audit" class="text-primary">Audit <span class="members mr-3">(4)</span></label>
+                         <ul class="list-group list-group-flush">
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                          </ul>
+                    </div>
+                <!--One Group profile-->
+<!--One Group profile-->
+                    <div class="one-profile mt-4">
+                        <label for="audit" class="text-danger">Tax <span class="members mr-3">(3)</span></label>
+                         <ul class="list-group list-group-flush">
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                          </ul>
+                    </div>
+                <!--One Group profile-->
+<!--One Group profile-->
+                    <div class="one-profile mt-4">
+                        <label for="audit" class="text-warning">Avisory <span class="members mr-3">(5)</span></label>
+                         <ul class="list-group list-group-flush">
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                          </ul>
+                    </div>
+                <!--One Group profile-->
+<!--One Group profile-->
+                    <div class="one-profile mt-4">
+                        <label for="audit" class="text-info">Central Srv <span class="members mr-3">(4)</span></label>
+                         <ul class="list-group list-group-flush">
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                         <!--One member-->
+                            <li class="list-group-item">
+                                <img src="./images/avatar.jpg" class="avatar mr-2" alt="Avatar image">
+                                <div class="member-infor">
+                                <a href="#" class="member-position d-block text-dark">Merry Lim</a>
+                                <span class="member-objet">Director / 98766541</span>
+                                </div>
+                            </li>
+                         <!--One member-->
+                          </ul>
+                    </div>
+                <!--One Group profile-->
+
+                </div>
              </div>
 
          <!--end box-->
        </div>
 </div>
-
  <!--End menu left-->
 </div>
 </div>
