--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                                <!--report-->
                                <div class="current-report pt-2 ml-4  d-inline-block p-3">
                                    <div class="current-time d-inline mr-3">7:12 PM</div>
-                                   <button class="current-total bg-dark d-inline-block text-white mr-2 px-3 rounded" onclick="openNav()" id="current-people">CURRENT: 57</button>
+                                   <button class="current-total bg-dark d-inline-block text-white mr-2 px-3 rounded" onclick="openNav('#list-profile')" id="current-people">CURRENT: 57</button>
                                    <div class="current-detail d-inline">
                                        <div class="audit d-inline-block mr-5"><i class="fas fa-circle text-primary mr-2"></i>23</div>
                                        <div class="audit d-inline-block  mr-5"><i class="fas fa-circle text-danger mr-2"></i>50</div>
@@ -123,6 +123,7 @@
                                <!--Map-->
                                <div class="map mt-5 pt-5 w-100 text-center" id="map">
                                     <img src="images/map_office.jpg" alt="map of Cluphouse" id="map-office" class="" title="Click on map to ZoomIn and Use mouse to move">
+                                    <img src="./images/avatar.jpg" class="avatar avatar-office mr-2"  alt="Avatar image" onclick="openNav('#member-detail')">
                                </div>
                                <!--End Map-->
                            <!--End Content tab-->
@@ -137,12 +138,13 @@
            </div>
          </div>
          <!--End Content right-->
-         <!--box-->
-             <div id="mySidenav" class="sidenav pl-3">
+ <!--box-->
+         <!--List profile-->
+             <div id="list-profile" class="sidenav pl-3">
                 <div class="sideBarSearch">
                     <i class="fas fa-search fa-2x bg-transparent mx-2"></i>
                     <button class="current-total bg-dark d-inline-block text-white mr-2 px-3 rounded" onclick="openNav()" id="current-people">CURRENT: 57</button>
-                    <a href="javascript:void(0)" class="closebtn d-inline-block" onclick="closeNav()">&times;</a>
+                    <a href="javascript:void(0)" class="closebtn d-inline-block" onclick="closeNav('#list-profile')">&times;</a>
                 </div>
                 <div class="total-profile mt-4">
                 <!--One Group profile-->
@@ -320,7 +322,25 @@
 
                 </div>
              </div>
+             <!--end List profile-->
 
+             <!--box member-detail -->
+        <div id="member-detail" class="sidenav pl-3">
+                <div class="sideBarSearch d-flex">
+                    <a href="javascript:void(0)" class="closebtn d-inline-block" onclick="closeNav('#member-detail')">&times;</a>
+                </div>
+                <div class="member-infor-detail d-flex">
+                    <img src="./images/avatar.jpg" alt="Avatar Mr-bean" class="avatar mr-4 border-danger">
+                    <div class="more-detail">
+                         <span class="profile text-danger d-block">Tax</span>
+                         <div class="name d-block">Mr Bean</div>
+                         <span class="position d-block">Director / 65001076</span>
+                         <span class="sub-name text-muted">mrbean@</span>
+                    </div>
+                </div>
+
+        </div>
+            <!--box member-detail -->
          <!--end box-->
        </div>
 </div>
