--- a/public/html/setting.html
+++ b/public/html/setting.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
        <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/semantic.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/jquery-ui.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/semantic.min.css">
+    <link rel="stylesheet" href="./css/jquery-ui.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/scss/ListSession.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./scss/daskboard.css">
+    <link rel="stylesheet" href="./scss/setting.css">
     <title>VietJet</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
                     <!-- Menu-->
            <nav class="col-md-2 d-md-block sidebar menu-left d-flex align-content-center" id="menuLeft">
                <div class="brands-kpmg pt-3 d-block m-auto text-uppercase">
-                   <a class="name-brands  text-white mb-1" href="home">
+                   <a class="name-brands  text-white mb-1" href="dashboard.html">
                    KPMG Clubhouse
                     </a>
                     <div class="sologan-brands text-white pt-2">
@@ -38,19 +39,19 @@
                        </a>
                      </li>
                       <li class="nav-item">
-                       <a class="nav-link d-flex" href="staff">
+                       <a class="nav-link d-flex" href="staff.html">
                             <i class="fas fa-user-tie mr-3 col-1 pl-0"></i>
                              Staff
                        </a>
                      </li>
                       <li class="nav-item">
-                       <a class="nav-link   d-flex" href="feeds">
+                       <a class="nav-link   d-flex" href="feeds.html">
                             <i class="fas fa-file-alt mr-3 col-1 pl-0"></i>
                              Feeds
                        </a>
                      </li>
-                     <li class="nav-item">
-                       <a class="nav-link  d-flex" href="#">
+                     <li class="nav-item active">
+                       <a class="nav-link  d-flex" href="setting.html">
                             <i class="fas fa-cogs mr-3 col-1 pl-0"></i>
                              Settings
                        </a>
@@ -76,7 +77,7 @@
                         <div class="show-content-right mt-5">
                          <ul class="nav nav-tabs" id="myTab" role="tablist">
                              <li class="nav-item ">
-                               <a class="nav-link active text-uppercase" id="live-tab" data-toggle="tab" href="#live" role="tab" aria-controls="home" aria-selected="true" data-title="Uset Settings">user settings</a>
+                               <a class="nav-link active text-uppercase" id="live-tab" data-toggle="tab" href="#live" role="tab" aria-controls="home" aria-selected="true" data-title="User Settings">user settings</a>
                              </li>
                              <li class="nav-item">
                                <a class="nav-link text-uppercase" id="overview-tab" data-toggle="tab" href="#overview" role="tab" aria-controls="profile" aria-selected="false" data-title="Zone Setting">zone settings</a>
@@ -111,13 +112,13 @@
  <!--End menu left-->
 </div>
 </div>
-<script src="%PUBLIC_URL%/js/jquery-3.3.1.min.js"></script>
-<script src="%PUBLIC_URL%/js/jquery-ui.min.js"></script>
-<script src="%PUBLIC_URL%/js/tether.min.js"></script>
-<script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
-<script src="%PUBLIC_URL%/js/bootstrap-select.min.js"></script>
-<script src="%PUBLIC_URL%/js/semantic.min.js"></script>
-<script src="%PUBLIC_URL%/js/ListSession.js"></script>
+<script src="./js/jquery-3.3.1.min.js"></script>
+<script src="./js/jquery-ui.min.js"></script>
+<script src="./js/tether.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/bootstrap-select.min.js"></script>
+<script src="./js/semantic.min.js"></script>
+<script src="./js/dasboard.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
     // Set Title Page
