--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -352,32 +352,32 @@
                     </div>
                 </div>
                 <div class="top-favorite mt-5">
-                    <div class=" mb-3 favarite-title">Top 3 Favorite Zones</div>
+                    <div class=" mb-3 favarite-title" data-profile="tax">Top 3 Favorite Zones</div>
                    <!-- each favorite -->
                     <div class="each-favorite d-flex align-items-center">
                         <div class="title">GrabGo</div>
-                        <div class="progress-bar mr-2" data-percent="90"></div>
-                        <span class="number-percent text-danger"></span>
+                        <div class="progress-bar mr-2" data-percent="90" data-profile="tax"></div>
+                        <span class="number-percent" data-profile="tax"></span>
                     </div>
                     <!-- each favorite -->
                     <!-- each favorite -->
                     <div class="each-favorite d-flex align-items-center">
                         <div class="title">Fun</div>
-                        <div class="progress-bar  mr-2" data-percent="60"></div>
-                        <span class="number-percent text-danger"></span>
+                        <div class="progress-bar  mr-2" data-percent="60" data-profile="tax"></div>
+                        <span class="number-percent" data-profile="tax"></span>
                     </div>
                     <!-- each favorite -->
                     <div class="each-favorite d-flex align-items-center">
                         <div class="title">Cafe</div>
-                        <div class="progress-bar  mr-2" data-percent="45"></div>
-                        <span class="number-percent text-danger"></span>
+                        <div class="progress-bar  mr-2" data-percent="45" data-profile="tax"></div>
+                        <span class="number-percent" data-profile="tax"></span>
                     </div>
                     <!-- each favorite -->
                     <!-- each favorite -->
                     <div class="each-favorite d-flex align-items-center">
                         <div class="title">Cafe</div>
-                        <div class="progress-bar  mr-2" data-percent="80"></div>
-                        <span class="number-percent text-danger"></span>
+                        <div class="progress-bar  mr-2" data-percent="80" data-profile="tax"></div>
+                        <span class="number-percent " data-profile="tax"></span>
                     </div>
                     <!-- each favorite -->
                 </div>
@@ -423,32 +423,32 @@
                         </div>
                     </div>
                     <div class="top-favorite mt-5">
-                        <div class=" mb-3 favarite-title">Top 3 Favorite Zones</div>
+                        <div class=" mb-3 favarite-title" data-profile="tax">Top 3 Favorite Zones</div>
                        <!-- each favorite -->
                         <div class="each-favorite d-flex align-items-center">
                             <div class="title">GrabGo</div>
-                            <div class="progress-bar mr-2" data-percent="90"></div>
-                            <span class="number-percent text-danger"></span>
+                            <div class="progress-bar mr-2" data-percent="90" data-profile="tax"></div>
+                            <span class="number-percent " data-profile="tax"></span>
                         </div>
                         <!-- each favorite -->
                         <!-- each favorite -->
                         <div class="each-favorite d-flex align-items-center">
                             <div class="title">Fun</div>
-                            <div class="progress-bar  mr-2" data-percent="60"></div>
-                            <span class="number-percent text-danger"></span>
+                            <div class="progress-bar  mr-2" data-percent="60" data-profile="tax"></div>
+                            <span class="number-percent " data-profile="tax"></span>
                         </div>
                         <!-- each favorite -->
                         <div class="each-favorite d-flex align-items-center">
                             <div class="title">Cafe</div>
-                            <div class="progress-bar  mr-2" data-percent="45"></div>
-                            <span class="number-percent text-danger"></span>
+                            <div class="progress-bar  mr-2" data-percent="45" data-profile="tax"></div>
+                            <span class="number-percent " data-profile="tax"></span>
                         </div>
                         <!-- each favorite -->
                         <!-- each favorite -->
                         <div class="each-favorite d-flex align-items-center">
                             <div class="title">Cafe</div>
-                            <div class="progress-bar  mr-2" data-percent="80"></div>
-                            <span class="number-percent text-danger"></span>
+                            <div class="progress-bar  mr-2" data-percent="80" data-profile="tax"></div>
+                            <span class="number-percent " data-profile="tax"></span>
                         </div>
                          <!-- button Send Email-->
                         <button class="btn btn-email btn-lg w-100 ">Email</button>
